# human_recognition

./: .env.exemple  .gitignore  =4.0.0  AGENTS.md  LICENSE  README.md  app.py  dashboard.py  dashboard_app.py  dashboard_gradio.py  dashboard_streamlit.py  pyproject.toml  requirements.txt  requirements_hf.txt  run.py  streamlit.py  streamlit_dashboard.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
models/: best_model_20260221_152759.pkl
reports/: model_comparison_20260220_120936.json  model_comparison_20260221_152759.json  model_comparison_20260223_203343.json  results_20260218_144343.json
src/: config.py  data_loader.py  ensemble.py  feature_extractor.py  model_registry.py  real_time_detector.py  train.py  train_advanced.py  utils.py  yoosee_camera.py  yoosee_digest.py
tools/: find_yoosee_ip.py  quick_test.py  rtsp_client.py  rtsp_gateway.py  rtsp_to_mjpeg.py  test_digest_auth.py  test_yoosee_connection.py  yoosee_proxy.py
